progress in shop module * added support for redux * fixed some layout issues

--- a/src/app/shop/product-card/product-card.component.scss
+++ b/src/app/shop/product-card/product-card.component.scss
@@ -7,7 +7,6 @@ strong{
 }
 
 :host{
-    max-height: 100%;
     & .full-height{
         max-height: 100%;
         min-height: 100%;
